# telegram_agent_crewAI

./: .env.example  .gitignore  pyproject.toml  test_logger.py  test_response_generator.py  test_semantic_analyzer.py  test_telegram_connector.py  test_telegram_fetcher.py
src/: agent.py  main.py  task.py  tools.py
src/crew_telegram_human_chat_agent/: crew.py  main.py
src/crew_telegram_human_chat_agent/config/: agents.yaml  tasks.yaml
src/crew_telegram_human_chat_agent/tools/: __init__.py  logger.py  response_generator.py  semantic_analyzer.py  telegram_connector.py  telegram_message_fetcher.py
