[project]
name = "crew_telegram_human_chat_agent"
version = "0.1.0"
description = "crew_telegram_human_chat_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
crew_telegram_human_chat_agent = "crew_telegram_human_chat_agent.main:run"
run_crew = "crew_telegram_human_chat_agent.main:run"
train = "crew_telegram_human_chat_agent.main:train"
replay = "crew_telegram_human_chat_agent.main:replay"
test = "crew_telegram_human_chat_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
